Добавил обработчик обновления задачи
